# zero2prod

./: .env  Cargo.toml  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 20221104171248_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
