[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[lib]
# src/lib.rs its the default path, so it can be ommitted is using
# a custom name is its mandatory to sset the path var.
path="src/lib.rs"

# Double square brackets is TOML's array syntax
[[bin]]
path="src/main.rs"
name="zero2prod"

[dev-dependencies]
reqwest = "0.11.12"
